[gd_scene load_steps=20 format=3 uid="uid://cg0hw62e2sfw6"]

[ext_resource type="Texture2D" uid="uid://cx5xu1kopn8bh" path="res://Sprites/UI/Queue/line.png" id="1_0obn8"]
[ext_resource type="Script" path="res://Prefabs/UI/ModeQueue.gd" id="1_6vam8"]
[ext_resource type="Texture2D" uid="uid://bgmgyhkkqkobs" path="res://Sprites/UI/Queue/queue_shape_bg.png" id="2_prrwx"]
[ext_resource type="Texture2D" uid="uid://ecx6nm81utiq" path="res://Sprites/UI/Queue/queue_shape_fill.png" id="3_a4a3s"]
[ext_resource type="Texture2D" uid="uid://byd77y1g07gtv" path="res://Sprites/UI/Queue/queue_Ready.png" id="4_jsser"]
[ext_resource type="Texture2D" uid="uid://7obqbtmo5t8a" path="res://Sprites/UI/Queue/queue_Get.png" id="5_ijwee"]
[ext_resource type="Texture2D" uid="uid://bkam7t7m520ex" path="res://Sprites/UI/ModeCards/CaptureTheFlag.png" id="6_ct42p"]
[ext_resource type="Texture2D" uid="uid://5ioglurqf1fv" path="res://Sprites/UI/ModeCards/Goal.png" id="8_33coh"]
[ext_resource type="AudioStream" uid="uid://lug0o65erkxl" path="res://Sounds/sfx_card_land.wav" id="8_c28rq"]
[ext_resource type="AudioStream" uid="uid://nym13b5fe6kj" path="res://Sounds/sfx_ui_getreadyflyin.wav" id="9_1tlnp"]
[ext_resource type="AudioStream" uid="uid://dl5nuvpyewect" path="res://Sounds/sfx_ui_rising.wav" id="10_8eb70"]
[ext_resource type="AudioStream" uid="uid://cj3sv78vdrlt1" path="res://Sounds/sfx_GetReady_01.wav" id="11_063a5"]

[sub_resource type="Animation" id="Animation_8n4lq"]
resource_name = "Card"
length = 2.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2, 2), Vector2(0.5, 0.5), Vector2(0.6, 0.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.25, 1.7, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LineContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardShadow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(0.8, 0.8), Vector2(0.61, 0.61)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardShadow:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(639, 308), Vector2(608, 347), Vector2(623, 334)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardShadow:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 1.7, 1.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("QueueShapeBg:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "audio"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("sfx_channel1")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_c28rq")
}],
"times": PackedFloat32Array(0)
}
tracks/7/use_blend = true

[sub_resource type="Animation" id="Animation_7lvkb"]
resource_name = "GetReady"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("QueueReady:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1594, 299), Vector2(841, 299), Vector2(825, 299), Vector2(-443, 299)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("QueueGet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-240, 272), Vector2(427, 272), Vector2(470, 272), Vector2(1599, 272)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("QueueShapeBg/QueueShapeFill:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(0, 0, 734, 66), Rect2(734, 0, 0, 66)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("QueueShapeBg/QueueShapeFill:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(370, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("QueueShapeBg/QueueShapeFill:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(4, 0, 0, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LineContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("QueueShapeBg:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.1, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "audio"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("sfx_channel1")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_1tlnp")
}],
"times": PackedFloat32Array(0)
}
tracks/7/use_blend = true
tracks/8/type = "audio"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("sfx_channel2")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.02,
"stream": ExtResource("10_8eb70")
}],
"times": PackedFloat32Array(0)
}
tracks/8/use_blend = true
tracks/9/type = "audio"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("sfx_channel3")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_063a5")
}],
"times": PackedFloat32Array(0.5)
}
tracks/9/use_blend = true

[sub_resource type="Animation" id="Animation_6myqf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("QueueShapeBg/QueueShapeFill:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 734, 66)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("QueueShapeBg/QueueShapeFill:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("QueueShapeBg/QueueShapeFill:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LineContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("QueueShapeBg:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardSprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CardSprite:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CardShadow:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CardShadow:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(639, 308)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CardShadow:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_owe42"]
_data = {
"Card": SubResource("Animation_8n4lq"),
"GetReady": SubResource("Animation_7lvkb"),
"RESET": SubResource("Animation_6myqf")
}

[sub_resource type="Animation" id="Animation_wq8p4"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LineContainer/Line:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(747, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LineContainer/Line:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(115, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LineContainer/Line:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LineContainer/Line:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LineContainer/Line/Line2:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LineContainer/Line/Line2:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-115, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("LineContainer/Line/Line3:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("LineContainer/Line/Line3:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(255, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("LineContainer/Line/Line3:scale:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("LineContainer/Line/Line3:scale:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("LineContainer/Line/Line3/Line4:position:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("LineContainer/Line/Line3/Line4:position:y")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-254, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("LineContainer/Line/Line3/Line4:scale:x")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("LineContainer/Line/Line3/Line4:scale:y")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.391886, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_virgg"]
resource_name = "default"
length = 2.5
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LineContainer/Line:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(747, -0.25, 0, 0.25, 0, 747, -0.25, 0, 0.25, 0, 747, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LineContainer/Line:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(115, -0.25, 0, 0.25, 0, 347, -0.25, 0, 0.25, 0, 115, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LineContainer/Line:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LineContainer/Line:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2.5)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LineContainer/Line/Line2:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.3, 2)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LineContainer/Line/Line2:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-115, -0.25, 0, 0.25, 0, 1310.67, -0.25, 0, 0.25, 0, 126.254, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.3, 2)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("LineContainer/Line/Line3:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.7, 1.8, 1.9, 2.5)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("LineContainer/Line/Line3:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(255, -0.25, 0, 0.25, 0, -369.195, -0.25, 0, 0.25, 0, 213.787, -0.25, 0, 0.25, 0, 253.554, -0.25, 0, 0.25, 0, 320, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.7, 1.8, 1.9, 2.5)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("LineContainer/Line/Line3:scale:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.7, 1.8, 2.5)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("LineContainer/Line/Line3:scale:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 0.7, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.7, 1.8, 2.5)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("LineContainer/Line/Line3/Line4:position:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8, 1.4, 1.9)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("LineContainer/Line/Line3/Line4:position:y")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(-254, -0.25, 0, 0.25, 0, 321.788, -0.25, 0, 0.25, 0, -279.155, -0.25, 0, 0.25, 0, -69.5218, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8, 1.4, 1.9)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("LineContainer/Line/Line3/Line4:scale:x")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8, 1.4, 1.9)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("LineContainer/Line/Line3/Line4:scale:y")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0.391886, -0.25, 0, 0.25, 0, 0.391886, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8, 1.4, 1.9)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v7vac"]
_data = {
"RESET": SubResource("Animation_wq8p4"),
"default": SubResource("Animation_virgg")
}

[node name="ModeQueue" type="CanvasLayer" groups=["ModeQueue"]]
script = ExtResource("1_6vam8")

[node name="LineContainer" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)

[node name="Line" type="Sprite2D" parent="LineContainer"]
position = Vector2(747, 115)
texture = ExtResource("1_0obn8")

[node name="Line2" type="Sprite2D" parent="LineContainer/Line"]
position = Vector2(0, -115)
texture = ExtResource("1_0obn8")

[node name="Line3" type="Sprite2D" parent="LineContainer/Line"]
position = Vector2(0, 255)
scale = Vector2(0.5, 1)
texture = ExtResource("1_0obn8")

[node name="Line4" type="Sprite2D" parent="LineContainer/Line/Line3"]
position = Vector2(0, -254)
scale = Vector2(1, 0.391886)
texture = ExtResource("1_0obn8")

[node name="QueueShapeBg" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(670, 391)
texture = ExtResource("2_prrwx")

[node name="QueueShapeFill" type="Sprite2D" parent="QueueShapeBg"]
texture = ExtResource("3_a4a3s")
region_enabled = true
region_rect = Rect2(0, 0, 734, 66)

[node name="QueueReady" type="Sprite2D" parent="."]
position = Vector2(-443, 299)
texture = ExtResource("4_jsser")

[node name="QueueGet" type="Sprite2D" parent="."]
position = Vector2(1599, 272)
scale = Vector2(1.1, 1.1)
texture = ExtResource("5_ijwee")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_owe42")
}
speed_scale = 1.8

[node name="lineAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v7vac")
}
autoplay = "default"

[node name="CardShadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0)
position = Vector2(639, 308)
texture = ExtResource("6_ct42p")

[node name="CardSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(639, 308)
scale = Vector2(2, 2)
texture = ExtResource("8_33coh")

[node name="TimeBetweenQueue" type="Timer" parent="."]
one_shot = true

[node name="sfx_channel1" type="AudioStreamPlayer" parent="."]
volume_db = -2.0
bus = &"SoundFX"

[node name="sfx_channel2" type="AudioStreamPlayer" parent="."]
volume_db = -4.0
bus = &"SoundFX"

[node name="sfx_channel3" type="AudioStreamPlayer" parent="."]
volume_db = 3.0
pitch_scale = 0.9
bus = &"SoundFX"

[connection signal="timeout" from="TimeBetweenQueue" to="." method="_on_time_between_queue_timeout"]
